--- a/CloneCoding1/src/main/webapp/index2.html
+++ b/CloneCoding1/src/main/webapp/index2.html
@@ -4,54 +4,74 @@
 <meta charset="UTF-8">
 <title>clone2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+	href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap"
+	rel="stylesheet">
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link rel="stylesheet" href="" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+	integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+	crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src=""></script>
-<style>
-.material-symbols-outlined {
-	font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48
-}
-</style>
+
+<link rel="stylesheet" href="css/layout.css" />
 </head>
 <body>
 	<div class="call_chatbot">
 		<img src="https://picsum.photos/50" alt="챗봇" />
 	</div>
 	<div class="d-none" id="chatbot">
-		<!-- 챗봇이 열림 -->
+		<img src="https://picsum.photos/50" alt="챗봇" />
 	</div>
 	<header>
-		<div class="logo">
-			<a href="#"><img src="https://picsum.photos/50" width="50"
-				height="50" alt="" /></a>
+		<div class="header_wrap">
+			<div class="logo">
+				<a href="#"><img src="images/su_logo.png" width="50" height="50"
+					alt="수코딩" /></a>
+			</div>
+			<!-- /.logo -->
+			<nav class="main_nav">
+				<ul id="gnb">
+					<li><a href="#">소개</a></li>
+					<li><a href="#">커리큘럼</a></li>
+					<li><a href="#">커뮤니티</a></li>
+					<li><a href="#">고객센터</a></li>
+				</ul>
+				<!-- /#gnb -->
+			</nav>
+			<!-- /.main_nav -->
+			<div class="login">
+				<a href="#">로그인</a>
+			</div>
+			<!-- /.login -->
 		</div>
-		<!-- /.logo -->
-		<nav class="main_nav">
-			<ul id="gnb">
-				<li><a href="#">menu 1</a></li>
-				<li><a href="#">menu 2</a></li>
-				<li><a href="#">menu 3</a></li>
-				<li><a href="#">menu 4</a></li>
-			</ul>
-			<!-- /#gnb -->
-		</nav>
-		<!-- /.main_nav -->
-		<div class="login">
-			<a href="#">로그인</a>
-		</div>
-		<!-- /.login -->
+		<!-- /.header_wrap -->
 	</header>
 
 	<div class="carousel">
-		<div class="prev"></div>
+		<div class="prev">
+			<span class="material-symbols-outlined"> chevron_left</span>
+		</div>
+
 		<!-- /.prev -->
 		<div class="contents">
 			<div class="conn_left"></div>
 			<!-- /.conn_left -->
 			<div class="conn_right"></div>
+			<img src="https://picsum.photos/300" alt="dummy image">
 			<!-- /.conn_right -->
-			<div class="paper"></div>
+			<div class="paper">
+				<ul>
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+					<li>5</li>
+				</ul>
+			</div>
 			<!-- /.paper -->
 		</div>
 		<!-- /.contents -->
